Removed unused imports Renamed HighligtStaff.java to HighlightStaff.java